--- a/wp-content/themes/srijanalaya/css/custom.css
+++ b/wp-content/themes/srijanalaya/css/custom.css
@@ -1,3 +1,109 @@
+
+//font
+@font-face {
+  font-family: 'bree serif';
+  src: url('../fonts/breeserif-regular-webfont.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/breeserif-regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/breeserif-regular-webfont.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/breeserif-regular-webfont.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/breeserif-regular-webfont.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/breeserif-regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+
+
+
+
+
+html {
+    overflow-x: hidden;
+}
+body {
+    color: #676767;
+    font-size: 15px;//14
+    -webkit-font-smoothing: antialiased;//for google font in safari
+    line-height: 22px;//18
+    letter-spacing: 1.5px;
+    &.home {
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-position: center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+        //background-image: url(../images/banner1.jpg);
+    }
+    @media (max-width: 991px) {
+        font-size: 13px;
+        line-height: 18px;
+    }
+}
+
+h1, h2 {
+    margin-top: 0;
+}
+h1 {
+        font-size: 36px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    line-height: 36px;
+    letter-spacing: 2px;
+    margin-bottom: 20px;
+    //margin-top: 0;
+    //text-transform: uppercase;
+    &.bordered {
+        //font-size: 18px;
+        position: relative;
+        letter-spacing: 1px;
+        //font-weight: 500;
+        //line-height: 29px;
+        //font-family: Helvetica;
+        margin-bottom: 40px;
+        &:after {
+            background: #adadad;
+            position: absolute;
+            margin: auto;
+            z-index: 1;
+            content: "";
+            height: 2px;
+            bottom: -20px;
+            left: 0;
+            width: 50px;
+        }
+    }
+    @media (max-width: 991px) {
+        font-size: 22px;
+        line-height: 22px;
+    }
+}
+h2 {
+    font-size: 35px;
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    line-height: 35px;
+    font-weight: bold;
+}
+
+//paragraph
+p {
+    
+    font-size: 17px;
+}
+
+.centered {
+    text-align: center;
+
+}
+
+
+
+
+
+
 .navbar-nav{
 	background-color: #ffffff;
 	padding-right: 1px;
@@ -6,9 +112,9 @@
 }
 .navbar-nav > li{
 	text-transform: uppercase;
- 	font-size: 19px;
+ 	font-size: 20px;
  	
- 	background-color: #4c4b4c;
+ 	background-color: rgba(0, 0, 0, 0.5);
  	margin-left: 1px;
 }
 .navbar-nav .caret {
@@ -17,7 +123,7 @@
     border-top: 6px solid #ffffff;
    }
 .navbar {
-	background-color: #4c4b4c;
+	background-color: rgba(0, 0, 0, 0.5);;
 	margin: 0px;
 }
 
@@ -29,17 +135,17 @@
 }
 .user_option {
 	float:right;
-	background-color: #4c4b4c  !important;
+	background-color:rgba(0, 0, 0, 0.5);  !important;
 
 }
 .user_option .btn {
 	border-radius: 0px;
-	background-color: #4c4b4c;
+	background-color: rgba(0, 0, 0, 0.5);;
 	border-style: none;
 
 }
 .sri_logo {
-	margin: 20px 70px;
+	margin: 30px 70px;
 }
 .nav > li.dropdown.open {
     position: static;
@@ -54,7 +160,7 @@
     
 }
 .navbar-inverse .navbar-nav > li > a {
-	color: #E6ECDE;
+	color: #D3D4D6;
 }
 .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
     background-color: #8BCB32 !important;
@@ -85,8 +191,64 @@
 }
 .dropdown-menu>ul {
     list-style-type: none;
- 	border-right:1px solid #ffffff;
-    
-    
+ 	border-right:1px solid #ffffff;    
+
 }
+#slider-2 .item {
+    margin: 0px;
+ 
+}
+
+#slider-2 , #sri-image div {
+    height: 100%;
+    width: 100%
+}    
+#slider-2 .item img{
+ 
+    width: 100%;
+    height: 100%;
+}
+
+#slider-1 .item h1 {
+     color:#E9204A;
+     font-size: 36px;
+    font-family: 'bree serif';
+     
+}
+
+#slider-1 .item h2 {
+    color:#898B8E;
+    font-size: 35px;
+    font-family: 'bree serif';
+    line-height: 40px;
+
+}
+
+#slider-1 .item p {
+    color:#898B8E;
+    font-size: 20px;
+    font-family: 'bree serif';
+
+}
+#slider-1 {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+}
+
+
+
+
+
+
+#left-col-first {
+    height:100%;
+background-image:url(../images/bgs1.svg);
+background-size: 225px 270px;
+
+}
+
+
+
 
