--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -119,7 +119,7 @@ p {
               padding-top: 9px;
               &:hover {
                 background-color: #8cc344;
-                color: @fontColor;  
+                color: #FFF;  
             }
           }
       }
@@ -132,6 +132,10 @@ p {
         top: 35%;
     }
 }
+}
+.dropdown-menu {
+    background-color: #8cc344;
+    color: #FFF;
 }
 #slider-2 .item {
     margin: 0px;
