--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -41,6 +41,7 @@ body {
 }
 h1, h2 {
     margin-top: 0;
+
 }
 h1 {
     font-size: 36px;
@@ -50,10 +51,12 @@ h1 {
     line-height: 36px;
     letter-spacing: 2px;
     margin-bottom: 20px;
-    @media (max-width: 991px) {
-        font-size: 22px;
-        line-height: 22px;
-    }
+              @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+
+                            font-size:29px;
+               }
+
+    
 }
 h2 {
     font-size: 35px;
@@ -62,12 +65,20 @@ h2 {
     letter-spacing: 1px;
     line-height: 35px;
     font-weight: bold;
+                  @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+
+                            font-size:28px;
+               }
 }
 
 p {
 
-    font-size: 19px;
+    font-size: 20px;
     font-family:'bree serif';
+                      @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+
+                            font-size:15px;
+               }
 }
 @backgroundGrey: #4c4b4c;
 @fontColor: #cecece;
@@ -144,22 +155,19 @@ p {
 
 #slider-1 .item h1 {
  color:#E9204A;
- font-size: 36px;
+
  font-family: 'bree serif';
 
 }
 
 #slider-1 .item h2 {
     color:#898B8E;
-    font-size: 35px;
     font-family: 'bree serif';
-    line-height: 40px;
 
 }
 
 #slider-1 .item p {
     color:#898B8E;
-    font-size: 20px;
     font-family: 'bree serif';
 
 }
@@ -190,15 +198,11 @@ p {
 }
 
 
-#section2  p,h1,h2 {
+#section2 ,#section3 {
    color:#898B8E;
    margin:2px;
    padding:2px;
-}
-#section2  p,h1,h2 {
-   color:#898B8E;
-   margin:2px;
-   padding:2px;
+
 }
 
 .section .btn {
@@ -209,12 +213,17 @@ p {
     font-family:'helvetica';
     margin-top:50px;
     font-weight:bold;
-    font-size:20px;
     letter-spacing:1px;
     &:hover {
         background:#E9204A;
         color:#ffffff;
     }
+                  @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+
+                            font-size:15px;
+                            width:150px;
+               }
+
 }
 
 
@@ -227,31 +236,41 @@ p {
 
 #threesecond , #onesecond , #onethird, #threethird {
     background-color:#F5F5F5;
-    padding-left:100px;
-    padding-top:100px;
+    padding-left:5%;
+    padding-top:5%;
+
 
 }
 #twothird,#fourthird {
    background-color:#E5E5E5;
-   padding-left:100px;
-   padding-top:100px;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
-    margin:0 -130px;
+   width:100%;
+   margin-left:-20%;
+   text-align:center;
+   display:block;
     position:absolute;
 
 
     bottom:0;
     .btn {
+         display:inline-block;
         padding-top:25px;
         font-size:24px;
-        line-height:200%;
+        //line-height:200%;
         background-color:#D1D2D1;
         height:100px;
         width:200px;
         border-radius: 150px 150px 0 0;
         -moz-border-radius: 150px 150px 0 0;
         -webkit-border-radius: 150px 150px 0 0;
+          @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+                            height:50px;
+                            width:100px;
+                            font-size:10px;
+               }
 
     }
 }
