--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -177,6 +177,9 @@ p {
    width: 50%;
    margin-left: 100px;
 }
+#left-col-first {
+    background:url(../images/bgs1.svg);
+}
 
 .fullheight {
     height:100%;
@@ -271,9 +274,27 @@ p {
                             width:100px;
                             font-size:10px;
                }
+ 
 
     }
 }
+.pink {
+    color:pink;
+}
+#fifthone {
+    height:50%;
+}
+#fifthtwo {
+    background-color:#303030;
+    height:50%;
+    color:#ffffff;
+}
+#fifththree {
+    height:25%;
+    background:url(../images/bgs1.svg);
+}
+
+
 
 
 
