--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -150,8 +150,21 @@ p {
         margin-left: 50px;
         max-height: 35px;
         font-size: 12px; 
+        .dropdown-menu {
+            padding: 0 0 2% 8%;
+            ul {
+                border-right: 1px Solid #6d6d6d;
+                padding-left: 30px;
+                &:last-child {
+                    border-right: none;
+                }
+                @media (max-width: 850px) {
+                    padding-left: 5px;
+                    font-size: 9px;
+                }
+            }
+        }
         li {
-            border-right: 1px Solid #6d6d6d;
             max-height: 35px;
             a {
                 color: @fontColor;
@@ -168,6 +181,7 @@ p {
                     color:#FFF;
                 }
             }
+            
         }
         @media (max-width: 850px) {
             font-size: 10px;
@@ -178,7 +192,9 @@ p {
         }
     }
 }
-
+.wrapper {
+    margin-top: -35px;
+}
 #slider-2 .item {
     margin: 0px;
 
@@ -336,7 +352,43 @@ p {
 }
 
 
+@media(max-width:769px) {
+    .navbar,#myNavbar, #myNavbar .nav {
+        max-height: 1000px;
+        margin-left: 0;
+    }
+    #myNavbar {
+        z-index: 9;
+    }
+    .dropdown-menu {
+        top: auto;
+        min-height: 150px;
+    }
+    #myNavbar .nav li {
+        max-height: none;
+    }
+    .menubutton {
+        top: -60px;
+        position: absolute;
+        right: 0px;
+        padding: 4px;
+        font-size: 10px;
+        a {
+            color: @fontColor;
+        }
+        .icon-bar {
+            background-color: @fontColor;
+        }
+    }
+}
 
-
-
+.navbar-nav .open {
+    .dropdown-menu {
+        background-color: #8cc344 !important;
+    }
+    a {
+        background-color: #8cc344 !important;
+        color:#FFF !important;
+    }
+}
 
