--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -155,6 +155,7 @@ p {
         font-size: 12px; 
         .dropdown-menu {
             padding: 0 0 2% 8%;
+            margin-top: -3px !important;
             ul {
                 border-right: 1px Solid #6d6d6d;
                 padding-left: 30px;
@@ -318,9 +319,6 @@ p {
 
 #section2 ,#section3 {
  color:#898B8E;
- margin:2px;
- padding:2px;
-
 }
 
 .section .btn {
