--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -325,7 +325,9 @@ p {
     background: transparent;
     color:#898B8E;
     border-radius:24px;
-    width:200px;
+    width: 136px;
+    padding: 6px 10px;
+    font-size: 14px;
     font-family:'helvetica';
     margin-top:50px;
     font-weight:bold;
@@ -366,22 +368,22 @@ p {
  .btn {
    display:inline-block;
    padding-top:25px;
-   font-size:24px;
-        //line-height:200%;
-        background-color:#D1D2D1;
-        height:100px;
-        width:200px;
-        border-radius: 150px 150px 0 0;
-        -moz-border-radius: 150px 150px 0 0;
-        -webkit-border-radius: 150px 150px 0 0;
-        @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-            height:50px;
-            width:100px;
-            font-size:10px;
-        }
+   font-size:20px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:70px;
+   width:150px;
+   border-radius: 150px 150px 0 0;
+   -moz-border-radius: 150px 150px 0 0;
+   -webkit-border-radius: 150px 150px 0 0;
+   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+    height:50px;
+    width:100px;
+    font-size:10px;
+}
 
 
-    }
+}
 }
 .pink {
     color:pink;
@@ -447,6 +449,7 @@ p {
         -webkit-transform:scale(1);
         -moz-transform:scale(1);
         -o-transform:scale(1);
+        transform:scale(1);
         -webkit-transition-duration: 1s;
         -moz-transition-duration: 1s;
         -o-transition-duration: 1s;
@@ -455,8 +458,31 @@ p {
         .outimg {
          -webkit-transform:scale(1.1);
          -moz-transform:scale(1.1);
+         transform:scale(1.1);
          -o-transform:scale(1.1);
      }
  }
+}
+.container {
+    .semicircle {
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
+    .semicircle {
+       -webkit-transform:scale(1.1);
+       -moz-transform:scale(1.1);
+       transform:scale(1.1);
+       -o-transform:scale(1.1);
+   }
+   .key {
+     color:#e9214b;
+ }
+}
 }
 
