--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -90,6 +90,9 @@ p {
     text-indent: 0.01px;
     text-overflow: '';
     padding-left: 5px;
+    font-family: allerregular, arial;
+    cursor: pointer;
+    font-weight: bold;
     background: transparent url('../images/arrow.png') no-repeat center right;
 }
 
@@ -119,6 +122,7 @@ p {
             border: 1px Solid #6d6d6d;
             height: 30px;
             margin: 0;
+            font-family: 'allerregular';
         }
     }
 }  
@@ -213,6 +217,11 @@ p {
         margin-top: 80px;
     }
 }
+#section2 {
+    .fp-tableCell {
+        vertical-align: inherit;
+    }
+}
 .owl-carousel .owl-item {
     height: 100%;
 }
@@ -261,11 +270,11 @@ p {
     }
 }
 #slider-1 {
- position: relative;
- top: 100px;
- width: 50%;
- margin-left: 100px;
- @media(max-width:769px) {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -278,9 +287,9 @@ p {
 }
 }
 #slider-1 .item h1 {
-   color:#E9204A;
+ color:#E9204A;
 
-   font-family: 'bree serif';
+ font-family: 'bree serif';
 
 }
 
@@ -318,7 +327,7 @@ p {
 
 
 #section2 ,#section3 {
- color:#898B8E;
+   color:#898B8E;
 }
 
 .section .btn {
@@ -352,35 +361,35 @@ p {
 
 }
 #twothird,#fourthird {
- background-color:#E5E5E5;
- padding-left:5%;
- padding-top:5%;
+   background-color:#E5E5E5;
+   padding-left:5%;
+   padding-top:5%;
 }
 .post-navigate {
- width:100%;
- margin-left:-20%;
- text-align:center;
- display:block;
- position:absolute;
+   width:100%;
+   margin-left:-20%;
+   text-align:center;
+   display:block;
+   position:absolute;
 
 
- bottom:0;
- .btn {
-   display:inline-block;
-   padding-top:25px;
-   font-size:20px;
-   color:#FFF;
-   background-color:#D1D2D1;
-   height:70px;
-   width:150px;
-   border-radius: 150px 150px 0 0;
-   -moz-border-radius: 150px 150px 0 0;
-   -webkit-border-radius: 150px 150px 0 0;
-   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-    height:50px;
-    width:100px;
-    font-size:10px;
-}
+   bottom:0;
+   .btn {
+     display:inline-block;
+     padding-top:25px;
+     font-size:20px;
+     color:#FFF;
+     background-color:#D1D2D1;
+     height:70px;
+     width:150px;
+     border-radius: 150px 150px 0 0;
+     -moz-border-radius: 150px 150px 0 0;
+     -webkit-border-radius: 150px 150px 0 0;
+     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+        height:50px;
+        width:100px;
+        font-size:10px;
+    }
 
 
 }
@@ -430,8 +439,8 @@ p {
             background-color: @fontColor;
         }
     }
-}
 
+}
 .navbar-nav .open {
     .dropdown-menu {
         background-color: #8cc344 !important;
@@ -456,33 +465,57 @@ p {
     }
     &:hover{
         .outimg {
-         -webkit-transform:scale(1.1);
-         -moz-transform:scale(1.1);
-         transform:scale(1.1);
-         -o-transform:scale(1.1);
-     }
- }
-}
-.container {
-    .semicircle {
-       -webkit-transform:scale(1);
-       -moz-transform:scale(1);
-       -o-transform:scale(1);
-       transform:scale(1);
-       -webkit-transition-duration: 1s;
-       -moz-transition-duration: 1s;
-       -o-transition-duration: 1s;
+           -webkit-transform:scale(1.1);
+           -moz-transform:scale(1.1);
+           transform:scale(1.1);
+           -o-transform:scale(1.1);
+       }
    }
-   &:hover{
+}
+.section-container {
     .semicircle {
-       -webkit-transform:scale(1.1);
-       -moz-transform:scale(1.1);
-       transform:scale(1.1);
-       -o-transform:scale(1.1);
-   }
-   .key {
-     color:#e9214b;
+     -webkit-transform:scale(1);
+     -moz-transform:scale(1);
+     -o-transform:scale(1);
+     transform:scale(1);
+     -webkit-transition-duration: 1s;
+     -moz-transition-duration: 1s;
+     -o-transition-duration: 1s;
  }
+ &:hover{
+    .semicircle {
+     -webkit-transform:scale(1.1);
+     -moz-transform:scale(1.1);
+     transform:scale(1.1);
+     -o-transform:scale(1.1);
+ }
+ .key {
+   color:#e9214b;
 }
 }
-
+}
+.quarter, .quarter2 {
+    height: 100%;
+    overflow: hidden;
+    padding: 0;
+    img {
+        height: 100%;
+    }
+    @media(max-width:769px) {
+        height: 50%;
+        position: absolute;
+        top:0;
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+}
+.quarter2 {
+    @media(max-width:769px) {
+        top:50%;
+    }
+}
+.section-container {
+    padding: 0;
+}
