--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -225,87 +225,9 @@ p {
 .owl-carousel .owl-item {
     height: 100%;
 }
-#slider-2, .owl-stage-outer, .owl-stage {
+.owl-stage-outer, .owl-stage {
     height: 100%;
 }
-#slider-2 .item {
-    margin: 0px;
-    height: 100%;
-}
-
-#slider-2 , #sri-image div {
-    height: 100%;
-    width: 100%
-}    
-#slider-2 .item img{
-    max-width: none;
-    width: auto;
-    height: 100%;
-    @media(max-width:769px) {
-        width: 100%;
-    }
-}
-#left-col-first {
-    background:url(../images/bgs1.svg);
-    height: 100%;
-    @media(max-width:769px) {
-        height: 40%;
-        overflow:hidden;
-    }
-    @media(max-width:729px) {
-        height: 42%;
-        overflow:hidden;
-    }
-}
-#right-col-first {
-    padding: 0;
-    height: 100%;
-    @media(max-width:769px) {
-        height: 52%;
-        overflow:hidden;
-    }
-    @media(max-width:729px) {
-        height: 50%;
-        overflow:hidden;
-    }
-}
-#slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   margin-left: 100px;
-   @media(max-width:769px) {
-    top:30px;
-    width:70%;
-    position: absolute;
-}
-@media(max-width:749px) {
-    top:30px;
-    width:70%;
-    position: absolute;
-    margin-left: 0;
-}
-}
-#slider-1 .item h1 {
- color:#E9204A;
-
- font-family: 'bree serif';
-
-}
-
-#slider-1 .item h2 {
-    color:#898B8E;
-    font-family: 'bree serif';
-
-}
-
-#slider-1 .item p {
-    color:#898B8E;
-    font-family: 'bree serif';
-
-}
-
-
 .fullheight {
     height:100%;
 }
@@ -338,7 +260,7 @@ p {
     padding: 6px 10px;
     font-size: 14px;
     font-family:'helvetica';
-    margin-top:50px;
+    margin-top:30px;
     font-weight:bold;
     letter-spacing:1px;
     &:hover {
@@ -349,6 +271,9 @@ p {
 
         font-size:15px;
         width:150px;
+    }
+    @media(max-width:650px) {
+        margin-top: 0;
     }
 
 }
@@ -367,12 +292,10 @@ p {
 }
 .post-navigate {
    width:100%;
-   margin-left:-20%;
+   left: 0;
    text-align:center;
    display:block;
    position:absolute;
-
-
    bottom:0;
    .btn {
      display:inline-block;
@@ -390,8 +313,9 @@ p {
         width:100px;
         font-size:10px;
     }
-
-
+}
+@media(max-width:769px) {
+    left:20%;
 }
 }
 .pink {
@@ -451,9 +375,8 @@ p {
     }
 }
 
-.fullimgclass {
+.img-container {
     overflow: hidden;
-    height: 100%;
     .outimg {
         -webkit-transform:scale(1);
         -moz-transform:scale(1);
@@ -472,7 +395,7 @@ p {
        }
    }
 }
-.section-container {
+.quarter, .quarter2 {
     .semicircle {
      -webkit-transform:scale(1);
      -moz-transform:scale(1);
@@ -518,4 +441,31 @@ p {
 }
 .section-container {
     padding: 0;
+    .section-inner {
+        padding: 80px 50px;
+        @media(max-width:900px) {
+            padding: 30px 20px;
+            text-align: center;
+        }
+        @media(max-width:769px) {
+            padding: 30px 30px;
+            text-align: center;
+            h1 {
+                font-size: 28px;
+            }
+            h2 {
+                font-size: 20px;
+            }
+        }
+        @media(max-width:475px) {
+            padding: 20px 30px;
+            text-align: center;
+            h1 {
+                font-size: 20px;
+            }
+            h2 {
+                font-size: 16px;
+            }
+        }
+    }
 }
