--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -45,12 +45,11 @@ h1, h2 {
 }
 h1 {
     font-size: 36px;
-    font-weight: bold;
     font-family: 'bree serif';
     letter-spacing: 2px;
     line-height: 36px;
     letter-spacing: 2px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:29px;
@@ -64,7 +63,6 @@ h2 {
     margin-bottom: 10px;
     letter-spacing: 1px;
     line-height: 35px;
-    font-weight: bold;
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:28px;
@@ -82,7 +80,13 @@ p {
 }
 @backgroundGrey: #4c4b4c;
 @fontColor: #cecece;
+.fullheight {
+    height:100%;
+}
 
+.no-padding {
+    padding:0px;
+}
 .custom-dropdown {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -228,14 +232,85 @@ p {
 .owl-stage-outer, .owl-stage {
     height: 100%;
 }
-.fullheight {
-    height:100%;
+#left-col-first {
+    background:url(../images/bgs1.svg);
+    height: 100%;
+    @media(max-width:769px) {
+        height: 40%;
+        overflow:hidden;
+    }
+    @media(max-width:729px) {
+        height: 42%;
+        overflow:hidden;
+    }
+}
+#right-col-first {
+    padding: 0;
+    height: 100%;
+    @media(max-width:769px) {
+        height: 52%;
+        overflow:hidden;
+    }
+    @media(max-width:729px) {
+        height: 50%;
+        overflow:hidden;
+    }
+}
+#slider-1 {
+   position: relative;
+   top: 100px;
+   width: 50%;
+   margin-left: 100px;
+   @media(max-width:769px) {
+    top:30px;
+    width:70%;
+    position: absolute;
+}
+@media(max-width:749px) {
+    top:30px;
+    width:70%;
+    position: absolute;
+    margin-left: 0;
+}
+}
+#slider-1 .item h1 {
+ color:#E9204A;
+
+ font-family: 'bree serif';
+
 }
 
-.no-padding {
-    padding:0px;
+#slider-1 .item h2 {
+    color:#898B8E;
+    font-family: 'bree serif';
+
 }
 
+#slider-1 .item p {
+    color:#898B8E;
+    font-family: 'bree serif';
+
+}
+#slider-2, .owl-stage-outer, .owl-stage {
+    height: 100%;
+}
+#slider-2 .item {
+    margin: 0px;
+    height: 100%;
+}
+
+#slider-2 , #sri-image div {
+    height: 100%;
+    width: 100%
+}    
+#slider-2 .item img{
+    max-width: none;
+    width: auto;
+    height: 100%;
+    @media(max-width:769px) {
+        width: 100%;
+    }
+}
 .overlay {
     position:absolute;
     top:0px;
@@ -313,9 +388,6 @@ p {
         width:100px;
         font-size:10px;
     }
-}
-@media(max-width:769px) {
-    left:20%;
 }
 }
 .pink {
@@ -406,6 +478,7 @@ p {
      -o-transition-duration: 1s;
  }
  &:hover{
+    color: #353535;
     .semicircle {
      -webkit-transform:scale(1.1);
      -moz-transform:scale(1.1);
@@ -417,7 +490,7 @@ p {
 }
 }
 }
-.quarter, .quarter2 {
+.quarter, .quarter2, .quarter3, .quarter4 {
     height: 100%;
     overflow: hidden;
     padding: 0;
@@ -432,12 +505,20 @@ p {
             width: 100%;
             height: auto;
         }
+        .small-text img {
+            width: auto;
+        }
     }
 }
-.quarter2 {
+.quarter2, .quarter4 {
     @media(max-width:769px) {
         top:50%;
     }
+}
+.quarter3, .quarter4 {
+ .key {
+   color:#e9214b;
+}
 }
 .section-container {
     padding: 0;
@@ -462,10 +543,49 @@ p {
             text-align: center;
             h1 {
                 font-size: 20px;
+                line-height: 24px;
             }
             h2 {
                 font-size: 16px;
+                line-height: 20px;
             }
         }
     }
+}
+.small-text {
+    font-size: 14px;
+    margin-top: 10px;
+    img {
+        vertical-align: text-top;
+        margin-right: 5px;
+        margin-top: 1px;
+    }
+}
+.odd {
+    background-color: #e5e5e4;
+    &:hover {
+        width:60%;
+        z-index: 10;
+    }
+}
+.even {
+    background-color: #eaeae9;
+    -webkit-transition: all .5s;
+    transition: all .5s;
+    &:hover {
+        width:60%;
+        margin-left: -10%;
+        z-index: 10;
+    }
+}
+.transparent {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 9;
+    opacity: 0.7;
+    display: none;
 }
