--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -467,7 +467,7 @@ p {
        }
    }
 }
-.quarter, .quarter2 {
+.quarter, .quarter2, .odd, .even {
     .semicircle {
      -webkit-transform:scale(1);
      -moz-transform:scale(1);
@@ -480,6 +480,7 @@ p {
  &:hover{
     color: #353535;
     .semicircle {
+        background-color: #e91f4a;
      -webkit-transform:scale(1.1);
      -moz-transform:scale(1.1);
      transform:scale(1.1);
