--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -481,14 +481,15 @@ p {
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
-     -webkit-transform:scale(1.1);
-     -moz-transform:scale(1.1);
-     transform:scale(1.1);
-     -o-transform:scale(1.1);
- }
- .key {
-   color:#e9214b;
-}
+        border-color: #e91f4a;
+        -webkit-transform:scale(1.1);
+        -moz-transform:scale(1.1);
+        transform:scale(1.1);
+        -o-transform:scale(1.1);
+    }
+    .key {
+       color:#e9214b;
+   }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -618,4 +619,38 @@ p {
         width: 100%;
         min-height: 100%;
     }
+}
+.bottom-container, .bottom-container2 {
+    height: 50%;
+    position: absolute;
+    top:0;
+    left:0;
+    color: #FFF;
+}
+.bottom-container {
+    background-color: #4c4b4c;
+    .section-inner {
+        padding-top: 40px;
+        .cover-wrap {
+            width:70%;
+            h1 {
+                color: #FFF;
+                margin-bottom: 10px;
+                .key {
+                    color:#e9214b;
+                }
+            } 
+            .vid-btn {
+                font-size: 12px;
+                color:#d5d5d5;
+            }
+            .semicircle {
+                background-color: #686969;
+                border-color: #686969;
+            }
+        }
+    }
+}
+.bottom-container2 {
+    left:50%;
 }
