--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -257,11 +257,11 @@ p {
     }
 }
 #slider-1 {
-   position: relative;
-   top: 100px;
-   width: 50%;
-   margin-left: 100px;
-   @media(max-width:769px) {
+ position: relative;
+ top: 100px;
+ width: 50%;
+ margin-left: 100px;
+ @media(max-width:769px) {
     top:30px;
     width:70%;
     position: absolute;
@@ -274,9 +274,9 @@ p {
 }
 }
 #slider-1 .item h1 {
- color:#E9204A;
+   color:#E9204A;
 
- font-family: 'bree serif';
+   font-family: 'bree serif';
 
 }
 
@@ -324,7 +324,7 @@ p {
 
 
 #section2 ,#section3 {
-   color:#898B8E;
+ color:#898B8E;
 }
 
 .section .btn {
@@ -361,33 +361,33 @@ p {
 
 }
 #twothird,#fourthird {
-   background-color:#E5E5E5;
-   padding-left:5%;
-   padding-top:5%;
+ background-color:#E5E5E5;
+ padding-left:5%;
+ padding-top:5%;
 }
 .post-navigate {
-   width:100%;
-   left: 0;
-   text-align:center;
-   display:block;
-   position:absolute;
-   bottom:0;
-   .btn {
-     display:inline-block;
-     padding-top:25px;
-     font-size:20px;
-     color:#FFF;
-     background-color:#D1D2D1;
-     height:70px;
-     width:150px;
-     border-radius: 150px 150px 0 0;
-     -moz-border-radius: 150px 150px 0 0;
-     -webkit-border-radius: 150px 150px 0 0;
-     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
-        height:50px;
-        width:100px;
-        font-size:10px;
-    }
+ width:100%;
+ left: 0;
+ text-align:center;
+ display:block;
+ position:absolute;
+ bottom:0;
+ .btn {
+   display:inline-block;
+   padding-top:25px;
+   font-size:20px;
+   color:#FFF;
+   background-color:#D1D2D1;
+   height:70px;
+   width:150px;
+   border-radius: 150px 150px 0 0;
+   -moz-border-radius: 150px 150px 0 0;
+   -webkit-border-radius: 150px 150px 0 0;
+   @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
+    height:50px;
+    width:100px;
+    font-size:10px;
+}
 }
 }
 .pink {
@@ -460,24 +460,24 @@ p {
     }
     &:hover{
         .outimg {
-           -webkit-transform:scale(1.1);
-           -moz-transform:scale(1.1);
-           transform:scale(1.1);
-           -o-transform:scale(1.1);
-       }
-   }
+         -webkit-transform:scale(1.1);
+         -moz-transform:scale(1.1);
+         transform:scale(1.1);
+         -o-transform:scale(1.1);
+     }
+ }
 }
 .quarter, .quarter2, .odd, .even {
     .semicircle {
-     -webkit-transform:scale(1);
-     -moz-transform:scale(1);
-     -o-transform:scale(1);
-     transform:scale(1);
-     -webkit-transition-duration: 1s;
-     -moz-transition-duration: 1s;
-     -o-transition-duration: 1s;
- }
- &:hover{
+       -webkit-transform:scale(1);
+       -moz-transform:scale(1);
+       -o-transform:scale(1);
+       transform:scale(1);
+       -webkit-transition-duration: 1s;
+       -moz-transition-duration: 1s;
+       -o-transition-duration: 1s;
+   }
+   &:hover{
     color: #353535;
     .semicircle {
         background-color: #e91f4a;
@@ -488,8 +488,8 @@ p {
         -o-transform:scale(1.1);
     }
     .key {
-       color:#e9214b;
-   }
+     color:#e9214b;
+ }
 }
 }
 .quarter, .quarter2, .quarter3, .quarter4 {
@@ -518,9 +518,9 @@ p {
     }
 }
 .quarter3, .quarter4 {
- .key {
-   color:#e9214b;
-}
+   .key {
+     color:#e9214b;
+ }
 }
 .section-container {
     padding: 0;
@@ -653,4 +653,30 @@ p {
 }
 .bottom-container2 {
     left:50%;
+}
+.key {
+    color:#e9214b;
+}
+.halfheight {
+    height: 50%;
+}
+.quote-wrap {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top:50%;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: url('../images/bgs1_flip.svg') center repeat;
+    background-size: inherit;
+    p {
+        font-family: 'bree serif';
+        margin: 0 auto;
+        font-size: 24px;
+        width: 30%;
+        line-height: 25px;
+        text-align: center;
+    }
 }
