--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -692,7 +692,7 @@ a:hover {
     color: #FFF;
     align-items: left;
     justify-content: left;
-    background-color: rgba(61, 61, 61, 0.93);
+    background-color: rgba(0,0,0,0.7);
     a {
         color: #FFF;
         &:hover {
