--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1,6 +1,14 @@
 // bootstrap
 @import "bootstrap.less";
 @import "yamm.less";
+@black: #000000;
+@white: #ffffff;
+@gray: #666666;
+@light-gray: #eaeaea;
+@theme-black: #191919;
+
+@orange: #ff3d2e;
+@brown: brown;
 
 //font
 @font-face {
@@ -214,6 +222,14 @@ p {
     .row {
         height: 100%;
     }
+}
+.nopadding {
+    padding-left:0px;
+    padding-right:0px;
+}
+.nomargin {
+    margin-left:0px;
+    margin-right:0px;
 }
 #section1 {
     .fp-tableCell {
@@ -680,3 +696,152 @@ p {
         text-align: center;
     }
 }
+
+
+.nav-icons {
+list-style-type:none;
+    position: fixed;
+    right: 40px;
+    bottom: 20px;
+    z-index: 100;
+    ul {
+    list-style-type:none;
+        margin-bottom: 0;
+        li {
+        list-style-type:none;
+            margin-bottom: 5px;
+            a {
+                background-color: @theme-black;
+                background-repeat: no-repeat;
+                background-position: center;
+                border-radius: 35px;
+                position: relative;
+                display: inline-block;
+                width: 70px;
+                height: 70px;           
+                line-height: 60px;
+                text-align: center;
+               
+                span {
+                    border-radius: 10px;
+                    background: @theme-black;
+                    color: @white;
+                    font-size: 14px;
+                    display: none;
+                    position: absolute;
+                    left: -95px;
+                    top: 0;
+                    width: 90px;
+                    line-height: 22px;
+                    margin-top: 10px;
+                }
+                img {
+                    width: 46%;
+                    height: auto;
+                    margin-top: 7px;
+                }
+                &:hover {
+                    span {
+                        display: block;
+                    }
+                }
+            }
+            &.plus {
+                a {
+                    background: @theme-black;
+                    box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+                    img {
+                        .transition(0.2s all ease);
+                    }
+                }
+            }
+            &.bulb {
+                a {
+                    background-image: url(../images/icon-bulb.png);
+                }
+                &:hover {
+                    a {
+                        background-image: url(../images/icon-bulb-hover.png);
+                    }
+                }
+            }
+            &.person {
+                a {
+                    background-image: url(../images/icon-person.png);
+                }
+                &:hover {
+                    a {
+                        background-image: url(../images/icon-person-hover.png);
+                    }
+                }
+            }           
+
+            &.bag {
+                a {
+                    background-image: url(../images/icon-bag.png);
+                }
+                &:hover {
+                    a {
+                        background-image: url(../images/icon-bag-hover.png);
+                    }
+                }
+            }
+
+            &.message {
+                a {
+                    background-image: url(../images/icon-message.png);
+                }
+                &:hover {
+                    a {
+                        background-image: url(../images/icon-message-hover.png);
+                    }
+                }
+            }
+
+            &.pencil {
+                a {
+                    background-image: url(../images/icon-pencil.png);
+                }
+                &:hover {
+                    a {
+                        background-image: url(../images/icon-pencil-hover.png);
+                    }
+                }
+            }
+        }
+    }
+    &:hover {
+        li.plus {
+            a {
+                img {
+                    .rotate(45deg);
+                }
+            }
+        }
+    }
+    @media (max-width: 767px) {
+        right: 20px;
+    }
+}//end nav-icons
+.slider-caption {
+    padding-right:0px;
+    padding-left:0px;
+}
+.progressbar {
+    height:8px;
+    
+    background:#E1E1E1;
+}
+#bar1 ,#bar2 ,#bar3 {
+    background-color:#E8234B;;
+    height:100%;
+   width:0px;
+   padding-left:0px;
+    padding-right:0px;
+    -webkit-transition: width 3000ms;
+    transition: width 3000ms;
+   
+
+
+}
+
