--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -80,7 +80,7 @@ h2 {
 p {
 
     font-size: 20px;
-    font-family:'bree serif';
+    font-family:'Helvetica';
     @media (min-width :700px) and (max-width: 1199px) ,(max-width:700px){
 
         font-size:15px;
@@ -265,7 +265,7 @@ a:hover {
 }
 #right-col-first {
     padding: 0;
-    height: 100%;
+    height: 83%;
     @media(max-width:769px) {
         height: 52%;
         overflow:hidden;
@@ -324,8 +324,8 @@ a:hover {
 }    
 #slider-2 .item img{
     max-width: none;
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
     @media(max-width:769px) {
         width: 100%;
     }
