--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -98,6 +98,9 @@ a:hover {
 .no-padding {
     padding:0px;
 }
+.hideme {
+    display:none;
+}
 .custom-dropdown {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -161,6 +164,31 @@ a:hover {
 }
 .menubutton {
     border: 1px Solid @fontColor;
+}
+
+.loader {
+    height:100%;
+    width:100%;
+    position:fixed;
+    display:flex;
+    z-index:1000;
+    align-items:center;
+    justify-content:center;
+    img {
+    display:inline-block;   
+    }
+}
+.transbg {
+    height:100%;
+    width:100%;
+    background:black;
+    opacity:0.95;
+    position: absolute;
+left: 0px;
+top: 0px;
+z-index: -1;
+
+
 }
 #myNavbar {
     background-color: @backgroundGrey;
@@ -905,7 +933,7 @@ list-style-type:none;
 }
 .progressbar {
     height:8px;
-    
+ 
     background:#E1E1E1;
 }
 #bar1 ,#bar2 ,#bar3 {
@@ -916,8 +944,5 @@ list-style-type:none;
     padding-right:0px;
     -webkit-transition: width 3000ms;
     transition: width 3000ms;
-   
-
-
 }
 
