--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -352,7 +352,7 @@ z-index: -1;
 }    
 #slider-2 .item img{
     max-width: none;
-    width: 100%;
+    width: auto;
     height: auto;
     @media(max-width:769px) {
         width: 100%;
