CSS Fix for Slider

--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -354,6 +354,8 @@ z-index: -1;
     max-width: none;
     width: auto;
     height: auto;
+    min-width: 100%;
+    min-height: 102%;
     @media(max-width:769px) {
         width: 100%;
     }
