--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1,6 +1,7 @@
 // bootstrap
 @import "bootstrap.less";
 @import "yamm.less";
+@import "timeline.less";
 @black: #000000;
 @white: #ffffff;
 @gray: #666666;
