--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -929,4 +929,10 @@ list-style-type:none;
     -webkit-transition: width 3000ms;
     transition: width 3000ms;
 }
+.topbanner {
+    height:500px;
+    background-color:@theme-black;
+    width:100%;
+    margin-top:-35px;
+}
 
