--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -147,6 +147,13 @@ header h1 {
     font-size: 12px;
   }
 }
+.cd-timeline-content .wrapper {
+  height: 160px;
+  // overflow: hidden;
+}
+.cd-timeline-content img {
+  width: 120%;
+}
 .cd-timeline-img.cd-picture span {
   margin: 0 auto;
 }
