--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -120,6 +120,7 @@ header h1 {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  top: 34%;
   box-shadow: 0 0 0 4px white, inset 0 2px 0 rgba(0, 0, 0, 0.08), 0 3px 0 4px rgba(0, 0, 0, 0.05);
 }
 .cd-timeline-img img {
@@ -133,29 +134,7 @@ header h1 {
   margin-top: -12px;
 }
 .cd-timeline-img.cd-picture {
-  color: #FFF;
-  font-weight: bold;
-  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAO0lEQVQYlY3KuREAIAwEMfff4sau44hgePwQKJMB6ri77CcBdZypjHtK453CGKUnZumIVVqxS4DsJwEaNVZlfKeJOMkAAAAASUVORK5CYII=) repeat;
-  overflow: hidden;
-  font-size: 20px;
-  display: flex;
-  align-items: center;
-  @media (max-width:1200px) {
-    font-size: 14px;
-  }
-  @media (max-width:769px) {
-    font-size: 12px;
-  }
-}
-.cd-timeline-content .wrapper {
-  height: 160px;
-  // overflow: hidden;
-}
-.cd-timeline-content img {
-  width: 120%;
-}
-.cd-timeline-img.cd-picture span {
-  margin: 0 auto;
+  background: #75ce66;
 }
 .cd-timeline-img.cd-movie {
   background: #c03b44;
@@ -244,10 +223,8 @@ header h1 {
 .cd-timeline-content {
   position: relative;
   margin-left: 60px;
-  background: white;
   border-radius: 0.25em;
   padding: 1em;
-  box-shadow: 0 3px 0 #d7e4ed;
 }
 .cd-timeline-content:after {
   content: "";
@@ -311,13 +288,70 @@ header h1 {
   .cd-timeline-content {
     margin-left: 0;
     padding: 1.6em;
-    width: 45%;
+    width: 48%;
+    .project-wrapper {
+      background-size: cover;
+      min-height: 200px;
+      .content {
+        position: absolute;
+        top: 230px;
+        h2 {
+          color: #e91f4a;
+          font-size: 12px;
+          font-family:'Helvetica Bold';
+        }
+        p {
+          color: #807f7f;
+          font-size: 12px;
+          font-family:'Helvetica';
+        }
+      }
+    }
   }
-  .cd-timeline-content::before {
-    top: 24px;
-    left: 100%;
-    border-color: transparent;
-    border-left-color: white;
+  .project-wrapper-left::before {
+    position: absolute;
+    height: 125px;
+    left: 89%;
+    top: -10px;
+    border-bottom: 20px solid transparent;
+    border-right: 20px solid #FFF;
+    display: block;
+    content: " ";
+  }
+  .project-wrapper-left::after {
+    position: absolute;
+    height: 135px;
+    left: 89%;
+    top: 45%;
+    border-top: 20px solid transparent;
+    border-right: 20px solid #FFF;
+    display: block;
+    content: " ";
+  }
+  .project-wrapper-right {
+    .content {
+      left: 45px;
+    }
+  }
+  .project-wrapper-right::before {
+    position: absolute;
+    height: 125px;
+    left: 6%;
+    top: -10px;
+    border-bottom: 20px solid transparent;
+    border-left: 20px solid #FFF;
+    display: block;
+    content: " ";
+  }
+  .project-wrapper-right::after {
+    position: absolute;
+    height: 135px;
+    left: 6%;
+    top: 45%;
+    border-top: 20px solid transparent;
+    border-left: 20px solid #FFF;
+    display: block;
+    content: " ";
   }
   .cd-timeline-content .cd-read-more {
     float: left;
@@ -338,7 +372,7 @@ header h1 {
     left: auto;
     right: 100%;
     border-color: transparent;
-    border-right-color: white;
+    border-right-color: #F00;
   }
   .cd-timeline-block:nth-child(even) .cd-timeline-content .cd-read-more {
     float: right;
@@ -480,7 +514,4 @@ header h1 {
     -o-transform: translateX(0);
     transform: translateX(0);
   }
-}
-.next-project {
-  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQ0lEQVQYlY3KOREAIAwEwDiJEBxEBu5TI+CoYHjyFdstKQsyo3VQJSlLHFcK45nc+CYzWumLXrpilHbMkrKAKklZMAFmv+oRMko1WAAAAABJRU5ErkJggg==) repeat !important;
 }
