--- a/wp-content/themes/srijanalaya/less/timeline.less
+++ b/wp-content/themes/srijanalaya/less/timeline.less
@@ -133,7 +133,17 @@ header h1 {
   margin-top: -12px;
 }
 .cd-timeline-img.cd-picture {
-  background: #75ce66;
+  background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAO0lEQVQYlY3KuREAIAwEMfff4sau44hgePwQKJMB6ri77CcBdZypjHtK453CGKUnZumIVVqxS4DsJwEaNVZlfKeJOMkAAAAASUVORK5CYII=) repeat;
+  display: flex;
+  justify-content: center;
+  span {
+    position: relative;
+    top: 32%;
+    font-size: 20px;
+    color: #FFF;
+    font-family: helvetica;
+    font-weight: bold;
+  }
 }
 .cd-timeline-img.cd-movie {
   background: #c03b44;
