--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -2,6 +2,7 @@
 @import "bootstrap.less";
 @import "yamm.less";
 @import "timeline.less";
+@import "calender.less";
 @black: #000000;
 @white: #ffffff;
 @gray: #666666;
