--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -973,3 +973,10 @@ list-style-type:none;
     }
 }
 
+.banner {
+    width: 100%;
+    background-image: url('../images/banner.png');
+    background-size: cover;
+    height: 375px;
+}
+
