--- a/wp-content/themes/srijanalaya/less/custom.less
+++ b/wp-content/themes/srijanalaya/less/custom.less
@@ -1030,3 +1030,12 @@ a:hover {
 .home .footer {
     margin-top: 0;
 }
+
+.banner {
+    .banner-content {
+        width: 350px;
+        margin-left: 60px;
+        padding-top: 60px;
+        color: #FFF;
+    }
+}
